--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-markdown": "^8.0.6",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.9",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
